final rename of lowercase

--- a/alenrollment/registration.css
+++ b/alenrollment/registration.css
@@ -7,7 +7,7 @@
 html, body {
     max-width: 100%;
     overflow-x: hidden;
-    background: linear-gradient(to right, #f1f0f0, #dcd9d9, #997c7c);
+    background: linear-gradient(to right, #eee4e4, #dcd9d9, #997c7c);
 }
 .enrollmentform-container{
     display: flex ;
